@@ -121,11 +121,6 @@ if HAVE_TVOS
 aout_LTLIBRARIES += libaudiounit_ios_plugin.la
 endif
 
-libaudioqueue_plugin_la_SOURCES = audio_output/audioqueue.c
-libaudioqueue_plugin_la_LDFLAGS = $(AM_LDFLAGS) -Wl,-framework,CoreAudio,-framework,AudioUnit,-framework,AudioToolbox,-framework,CoreServices -rpath '$(aoutdir)'
-EXTRA_LTLIBRARIES += libaudioqueue_plugin.la
-aout_LTLIBRARIES += $(LTLIBaudioqueue)
-
 libtizen_audio_plugin_la_SOURCES = audio_output/tizen_audio.c
 libtizen_audio_plugin_la_CFLAGS = $(AM_CFLAGS)
 EXTRA_LTLIBRARIES += libtizen_audio_plugin.la
