@@ -305,7 +305,6 @@ modules/audio_mixer/integer.c
 modules/audio_output/adummy.c
 modules/audio_output/alsa.c
 modules/audio_output/amem.c
-modules/audio_output/audioqueue.c
 modules/audio_output/audiotrack.c
 modules/audio_output/audiounit_ios.m
 modules/audio_output/auhal.c
